<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/iv_detailPhoto"
            android:layout_width="294dp"
            android:layout_height="226dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.010"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="78dp"
            android:contentDescription="@string/favorite"
            android:foregroundGravity="bottom"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintTop_toBottomOf="@id/iv_detailPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/tv_detailDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detailPhoto"
            tools:text="@string/title_detail_destination" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailDestination">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="18dp"
                android:background="@drawable/location"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_detailLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/title_location" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            tools:text="@string/description_destination"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/linear_layout"
            app:layout_constraintEnd_toEndOf="@id/linear_layout"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

        <TextView
            android:id="@+id/tv_detailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            tools:text="@string/description_event"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detailDescription"
            app:layout_constraintEnd_toEndOf="@id/tv_detailDescription"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailDescription" />

        <ProgressBar
            android:id="@+id/progressBar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>