<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_onboard"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:src="@drawable/candi_onboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_titleOnboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_onboard_page"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_onboard"/>

    <TextView
        android:id="@+id/tv_descOnboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/message_onboard_page"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleOnboard"/>

    <Button
        android:id="@+id/btn_loginOnboard"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descOnboard" />

    <Button
        android:id="@+id/btn_regisOnboard"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/regis"
        android:paddingTop="10dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_loginOnboard" />


</androidx.constraintlayout.widget.ConstraintLayout>