<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="180dp"
    android:layout_height="260dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:padding="0dp">

        <ImageView
            android:id="@+id/iv_destination"
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:visibility="visible"
            android:paddingTop="5dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nameDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@id/iv_destination"
            card_view:layout_constraintStart_toStartOf="@id/iv_destination"
            card_view:layout_constraintTop_toBottomOf="@id/iv_destination"
            tools:text="@string/title_item" />

        <LinearLayout
            android:id="@+id/linear_layout_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-2dp">

            <ImageButton
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_location"
                android:background="@drawable/location"/>

            <TextView
                android:id="@+id/tv_itemLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/title_location" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            tools:text="@string/description"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/linear_layout_item"
            app:layout_constraintEnd_toEndOf="@id/linear_layout_item"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>